--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <a href="http://web.stanford.edu/class/cs143/">CS143 compiler</a></br>
 
-        <a href="https://sp18.datastructur.es/">cs61b</a></br>
+        <a href="https://sp18.datastructur.es/">cs61b data structure and algothrims</a></br>
 
         CS:APP: <a href="http://csapp.cs.cmu.edu/">website</a> <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-f15/www/schedule.html">schedule</a></br>
 
@@ -122,13 +122,15 @@
 
         MIT Introduction to Algorithms: <a href="https://ocw.mit.edu/courses/6-006-introduction-to-algorithms-fall-2011/">website</a> <a href="https://sites.math.rutgers.edu/~ajl213/CLRS/CLRS.html">Solutions of the book</a></br>
 
-        <a href="https://15445.courses.cs.cmu.edu/fall2022/assignments.html">cmu 15445</a></br>
+        <a href="https://15445.courses.cs.cmu.edu/fall2022/assignments.html">cmu 15445: an intro to database system</a></br>
 
-        CS106B: <a href="https://web.stanford.edu/class/cs106b/">website</a> <a href="https://web.stanford.edu/class/archive/cs/cs106b/cs106b.1208/">videos</a></br>
+        CS106B: programming abstractions <a href="https://web.stanford.edu/class/cs106b/">website</a> <a href="https://web.stanford.edu/class/archive/cs/cs106b/cs106b.1208/">videos</a></br>
 
-        CS106L: <a href="https://web.stanford.edu/class/archive/cs/cs106l/cs106l.1212/lectures.html">website</a> <a href=https://www.youtube.com/playlist?list=PLCgD3ws8aVdolCexlz8f3U-RROA0s5jWA>videos</a></br>
+        CS106L:c++ standard programming <a href="https://web.stanford.edu/class/archive/cs/cs106l/cs106l.1212/lectures.html">website</a> <a href=https://www.youtube.com/playlist?list=PLCgD3ws8aVdolCexlz8f3U-RROA0s5jWA>videos</a></br>
 
         <a href="https://www.coursera.org/learn/algorithms-part1/supplement/icGHT/welcome-to-algorithms-part-i">algothrim part I on coursera</a></br>
+
+        <a href="https://gaia.cs.umass.edu/kurose_ross/index.php">computre network: a top-down approach</a></br>
 
         <h2>Job</h2>
 
