--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
 
         <h2>Tools</h2>
 
-        <a href="https://gitmind.cn/">gitmind</a>
+        <a href="https://gitmind.com/">gitmind</a>
+
+        <a href="https://draw.io">draw io</a>
+
+        <a href="https://oimo.io/works/clock/">clock</a>
 
         <a href="https://renzhezhilu.gitee.io/webp2jpg-online/">webp-&gt;jpg</a>
 
@@ -97,6 +101,8 @@
         <a href="https://www.ldoceonline.com/">longman</a>
 
         <a href="https://app.lofi.co/">Lofi</a>
+
+        <a href="https://www.lofiatc.com/">lofi + atc</a>
 
         <a href="https://musicforprogramming.net/latest/">musicForProgramming();</a>
 
