--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 
         <a href="hppts://poe.com">poe</a>
 
+        <a href="https://coderadio.freecodecamp.org/">code radio</a>
+
         <h2>Courses</h2>
 
         <a href="https://csdiy.wiki/">CS自学指南</a></br>
