Add proton mail

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
         <a href="https://onedrive.live.com/">OneDrive</a>
 
+        <a href="https://mail.proton.me">Proton Mail</a">
+
         <h2>Information</h2>
 
         <a href="https://medium.com/">Medium</a>
