--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         <h1>Bookmarks</h1>
 
+        <a href="https://www.ldoceonline.com/search/">longman</a>
+
         <h2>Information</h2>
 
         <a href="https://medium.com/">Medium</a>
