Add some podcast and read-something-wonderful

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <a href="https://juejin.cn/">稀土掘金</a>
 
         <a href="https://www.v2ex.com/">V2EX</a>
+        
+        <a href="https://podtext.ai/">podtext</a>
+
+        <a href="https://readsomethingwonderful.com">read something wonderful</a>
 
         <h2>Tools</h2>
 
@@ -79,6 +83,8 @@
         <a href="hppts://poe.com">poe</a>
 
         <a href="https://coderadio.freecodecamp.org/">code radio</a>
+
+        <a href="https://www.jitashe.org/">吉他社</a>
 
         <h2>Courses</h2>
 
@@ -129,6 +135,10 @@
         <a href="https://www.creamdata.net/">CreamData</a>
 
         <a href="https://fastlink.ws/">FASTLINK</a>
+
+        <a href="https://mesl.cloud/">MESL</a>
+        
+        <a href="paopao.dog">paopao dog</a>
 
     </body>
 </html>
