Keep podcast subscriptions only

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <a href="https://podtext.ai/">podtext</a>
 
         <a href="https://readsomethingwonderful.com">read something wonderful</a>
+        
+        <a href="https://sspai.com">少数派</a>
 
         <h2>Tools</h2>
 
