--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <a href="https://mesl.cloud/">MESL</a>
         
-        <a href="paopao.dog">paopao dog</a>
+        <a href="https://paopao.dog">paopao dog</a>
         
         <a href="https://misakanetwork.top/">misaka</a>
 
