Add derivative calculator

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <a href="https://coderadio.freecodecamp.org/">code radio</a>
 
         <a href="https://www.jitashe.org/">吉他社</a>
+        
+        <a href="https://www.derivative-calculator.net/">derivative calculator</a>
 
         <h2>Courses</h2>
 
