Add integral calculator

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
         <a href="https://www.jitashe.org/">吉他社</a>
         
         <a href="https://www.derivative-calculator.net/">derivative calculator</a>
+        
+        <a href="https://www.integral-calculator.com/">integral calculator</a>
 
         <a href="https://pdf.drawboard.com/">drawboard pdf</a>
 
